Codigos de Barra

--- a/views/createCombo.hbs
+++ b/views/createCombo.hbs
@@ -181,7 +181,7 @@
                 contentType: 'application/json',
                 success: function (response) {
                     alert('Combo guardado exitosamente');
-                    window.location.href = '/home';
+                    window.location.href = '/viewCombo';
                 },
                 error: function (error) {
                     alert('Error al guardar el combo');
