Ajustes de saldos en negativo en ventas

--- a/views/caja.hbs
+++ b/views/caja.hbs
@@ -156,7 +156,7 @@
                 alert('Cierre parcial procesado correctamente.');
                 location.reload();
             } else {
-                alert('Error al procesar el cierre parcial.');
+                alert('El cierre parcial no puede dejar la caja en negativo');
             }
         });
 
@@ -181,7 +181,7 @@
                 alert('Retiro parcial transferencia procesado correctamente.');
                 location.reload();
             } else {
-                alert('Error al procesar el retiro parcial transferencia.');
+                alert('El retiro parcial de transferencia no puede dejar Total Transferencia en negativo');
             }
         });
 
