--- a/views/editProduct.hbs
+++ b/views/editProduct.hbs
@@ -28,19 +28,23 @@
             <input type="number" step="0.01" class="form-control" id="precio_venta" name="precio_venta"
                 value="{{product.precio_venta}}" required>
         </div>
-        <button type="button" onclick="updateProduct()" class="btn btn-primary">Guardar Cambios</button>
+        <div class="form-group text-center">
+            <button type="button" onclick="updateProduct()" class="btn btn-primary mt-5">Guardar Cambios</button>
+            <button type="button" onclick="cancelEdit()" class="btn btn-danger mt-5">Cancelar</button>
+        </div>
     </form>
 </div>
 
 <script>
     async function updateProduct() {
+        const originalCodBarra = "{{product.cod_barra}}"; // Original barcode
         const cod_barra = document.getElementById('cod_barra').value;
         const descripcion = document.getElementById('descripcion').value;
         const stock = document.getElementById('stock').value;
         const costo = document.getElementById('costo').value;
         const precio_venta = document.getElementById('precio_venta').value;
 
-        const url = `/products/${cod_barra}`; // Asegúrate de que la URL sea correcta
+        const url = `/products/${originalCodBarra}`; // Asegúrate de que la URL sea correcta
         const method = 'PUT';
         const headers = { 'Content-Type': 'application/json' };
         const body = JSON.stringify({ cod_barra, descripcion, stock, costo, precio_venta });
@@ -56,9 +60,13 @@
             }
         } catch (error) {
             console.error('Error al actualizar el producto:', error);
-            alert('Error al actualizar el producto. Consulte la consola para obtener más detalles.');
+            alert('Este codigo de Barras ya esta en uso!!!!');
         }
     }
+
+        function cancelEdit() {
+            window.location.href = '/products'; // Redirigir a la lista de productos
+        }
 </script>
 
 {{> footer}}
